# relations-client-python

./: .gitignore  Readme.md  generate_python_grpc_client.sh  publish_to_pypi.sh  setup.cfg
examples/: Readme.md  client.py  client_validations.py  requirements.txt  run_examples.sh
src/buf/validate/: validate_pb2.py  validate_pb2.pyi
src/kessel/relations/v1beta1/: check_pb2.py  check_pb2.pyi  check_pb2_grpc.py  common_pb2.py  common_pb2.pyi  common_pb2_grpc.py  lookup_pb2.py  lookup_pb2.pyi  lookup_pb2_grpc.py  relation_tuples_pb2.py  relation_tuples_pb2.pyi  relation_tuples_pb2_grpc.py
src/relations/v0/: check_pb2.py  check_pb2.pyi  check_pb2_grpc.py  common_pb2.py  common_pb2.pyi  common_pb2_grpc.py  lookup_pb2.py  lookup_pb2.pyi  lookup_pb2_grpc.py  relation_tuples_pb2.py  relation_tuples_pb2.pyi  relation_tuples_pb2_grpc.py
src/validate/: validate_pb2.py  validate_pb2_grpc.py
