[metadata]
name = relations-grpc-clients-python-kessel-project
version = 0.0.8
url = https://github.com/project-kessel
author = Libor Pichler
author_email = "Libor Pichler" <lpichler@redhat.com>
description = This package contains grpc python clients based on kessel relations-api.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
license_files = LICENSE
classifiers = 
	License :: OSI Approved :: Apache Software License
	Programming Language :: Python
	Programming Language :: Python :: 3.10
	Operating System :: OS Independent

[options]
package_dir = 
	=src
packages = find:
python_requires = >=3.10
install_requires = 
	grpcio
	grpcio-tools
	protobuf
	googleapis-common-protos

[options.packages.find]
where = src
exclude = 
	test*
